--- a/index.html
+++ b/index.html
@@ -10,34 +10,135 @@
 <body>
 
     <header>   
-        <div class="logo">
+        <figure class="logo">
             <!-- <img src="assets/images/logo.png" width="200"/> -->
-            <img src="https://pt.wikipedia.org/static/images/icons/wikipedia.png"/>
-        </div>
+            <img src="https://pt.wikipedia.org/static/images/icons/wikipedia.png" alt="logo da wikipedia"/>
+            <figcaption>Wikipédia</figcaption>
+        </figure>
     </header>
 
     <main class="content">
         <aside class="sidebar">
-            <h2>Título</h2>
+            <h1>Hypocrisy</h1>
+            <h3>Ver também</h3>
             <ul>
-                <li><a href="#">Links</a></li>
+                <li><a href="#">The Abyss</a></li>
+                <li><a href="#">Pain</a></li>
+                <li><a href="#">Bloodbath</a></li>
             </ul>
         </aside>
 
-        <div class="main">
-            
-        </div>
+        <article id="inicio" class="main">
+            <p>Hypocrisy é uma banda de death metal/death metal melódico, de Ludvika, Suécia.</p>
+            <p>A banda foi criada em 1990 como um projeto solo do compositor, multi-instrumentista, vocalista e produtor, Peter Tägtgren. O nome da banda ainda era Seditious. Na época, Tägtgren tocava apenas guitarra, enquanto Magnus Broberg (atual vocalista do Dark Funeral) cantava. Seria apenas a partir do terceiro álbum que Tägtgren se tornaria o vocalista. A atual gravadora da banda é a Nuclear Blast.</p>
+            <p>Em 2021, a música deles "Chemical Whore" foi eleita pela Loudwire como a 32ª melhor música de metal de 2021.</p>
 
-        <aside class="anchors">
+            <h2 id="integrantes">Integrantes</h2>
+            <hr>
+            <h3 id="formacao-atual">Formação Atual</h3>
+            <ul>
+                <li>Peter Tägtgren – vocal, guitarra (1990–presente)</li>
+                <li>Mikael Hedlund – baixo (1992–presente)</li>
+                <li>Reidar "Horgh" Horghagen – bateria (2004–presente)</li>
+            </ul>
+            <h3 id="memebros-antigos">Membros Antigos</h3>
+            <ul>
+                <li>Lars Szöke – bateria (1990–2004)</li>
+                <li>Magnus "Masse" Broberg – vocal (1992–1993)</li>
+                <li>Jonas Österberg – guitarra ​(1992–1995)</li>
+                <li>Andreas Holma – guitarra (2000–2006)</li>
+            </ul>
+            <h3 id="musicos-turne">Músicos de turnês</h3>
+            <ul>
+                <li>Mathias Kamijo – guitarra (1995–2000)</li>
+                <li>Klas Ideberg – guitarra (2006)</li>
+                <li>Tomas Elofsson – guitarra (2010–presente)</li>
+            </ul>
+
+            <h2 id="discografia">Discografia</h2>
+            <hr>
+            <h3 id="albuns">Álbuns</h3>
+            <ul>
+                <li>Penetralia (1992)</li>
+                <li>Osculum Obscenum (1993)</li>
+                <li>The Fourth Dimension (1994)</li>
+                <li>Abducted (1996)</li>
+                <li>The Final Chapter (1997)</li>
+                <li>Hypocrisy (1999)</li>
+                <li>Into the Abyss (2000)</li>
+                <li>Catch 22 (2002)</li>
+                <li>The Arrival (2004)</li>
+                <li>Virus (2005)</li>
+                <li>A Taste of Extreme Divinity (2009)</li>
+                <li>End of Disclosure (2013)</li>
+                <li>Worship (2021)</li>
+            </ul>
+            <h3 id="eps">EPs</h3>
+            <ul>
+                <li>Pleasure of Molestation (1993)</li>
+                <li>Inferior Devoties (1994)</li>
+                <li>Maximum Abduction (1996)</li>
+                <li>Virus Radio (2005)</li>
+                <li>Too Drunk To Fuck (2013)</li>
+            </ul>
+            <h3 id="compilacoes">Compilações</h3>
+            <ul>
+                <li>10 Years of Chaos and Confusion (2001)</li>
+                <li>Beast of Hypocrisy (2012)</li>
+            </ul>
+            <h3 id="albuns-ao-vivo">Álbuns ao vivo</h3>
+            <ul>
+                <li>Hypocrisy Destroys Wacken (1999, CD)</li>
+                <li>Hell Over Sofia - 20 Years of Chaos and Confusion (2011, DVD)</li>
+            </ul>
+            <h3 id="singles">Singles</h3>
+            <ul>
+                <li>"Carved Up" (1996)</li>
+                <li>"Don't Judge Me" (2008)</li>
+                <li>"Eraser (Live)" (2011)</li>
+                <li>"End of Disclosure" (2013)</li>
+            </ul>
+
+            <h2 id="referencias">Referências</h2>
+            <hr>
+            <ol>
+                <li>Harris, Chris (14 de julho de 2005). «Metal File: Motley Crue, Soulfly, Nile & More - News Story | Music, Celebrity, Artist News | MTV News». MTV.com. Consultado em 18 de outubro de 2011. Swedish death-metal veterans Hypocrisy will release their 10th studio album, Virus, on September 19.</li>
+                <li>«Biography - Hypocrisy Official Website». Hypocrisy.cc. Consultado em 18 Julho 2018</li>
+                <li>Al-Sharif, Rabab; DiVita, Joe; Hartmann, Graham; Richardson, Jake; Trapp, Philip; Summan, Yasmine (6 de dezembro de 2021). «The 35 Best Metal Songs of 2021». Loudwire. Townsquare Media. Consultado em 2 de janeiro de 2022</li>
+                <li>«HYPOCRISY To Release 'Worship' Album In November; 'Chemical Whore' Music Video Available». Blabbermouth.net. Setembro 10, 2021. Consultado em Setembro 10, 2021</li>
+            </ol>
+
+        </article>
+
+        <nav class="anchors">
             <h2>Neste Artigo</h2>
             <ul>
-                <li><a href="#">Âncoras</a></li>
+                <li><a href="#inicio">Início</a></li>
+                <li><a href="#integrantes">Integrantes</a></li>
+                <li>
+                    <ul>
+                        <li><a href="#formacao-atual">Formação Atual</a></li>
+                        <li><a href="#membros-antigos">Membros Antigos</a></li>
+                        <li><a href="#musicos-turne">Músicos de turnê</a></li>
+                    </ul>
+                </li>
+                <li><a href="#discografia">Discografia</a></li>
+                <li>
+                    <ul>
+                        <li><a href="#albuns">Álbuns</a></li>
+                        <li><a href="#eps">EPs</a></li>
+                        <li><a href="#compilacoes">Compilações</a></li>
+                        <li><a href="#albuns-ao-vivo">Álbuns ao vivo</a></li>
+                        <li><a href="#singles">Singles</a></li>
+                    </ul>
+                </li>
+                <li><a href="#referencias">Referências</a></li>
             </ul>
-        </aside>
+        </nav>
     </main>
 
-    <div class="footer">
+    <footer class="footer">
 
-    </div>
+    </footer>
 </body>
 </html>
